# lmstudio-example

./: .env.example  README.md  environment.yml  pyproject.toml  test_connection.py  test_models.py
examples/: 01_code_gen.py  02_json_structure.py  03_summarize.py  04_chatbot.py
utils/: __init__.py  lm_client.py
