[project]
name = "lmstudio-example"
version = "0.1.0"
description = "LM Studio Python SDK 예제 프로젝트"
requires-python = ">=3.10"
dependencies = [
    "lmstudio",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["utils*"]
